# yam

./: .cspell.json  .gitignore  AGENTS.md  Brewfile  CHANGELOG.md  Cargo.toml  NOTES.md  README.md  TODO.md  app.py  build.rs  check_golden.py  config.py  go.sum  install.sh  known_issues.md  scene_config.json
.github/: PULL_REQUEST_TEMPLATE.md
chafa/: chafa_lab.sh
docs/: ARCHITECTURE.md  AUDIT.md  CURRENT_ISSUES_2026-04-25.md  DOTFILES_MIGRATION.md  FLATTENING_PLAN.md  HYGIENE.md  LOG.md  README.md  REFERENCE_ARCHIVE.md  RELEASE_MODEL.md  RENDERING.md  SCENE_MODEL.md  VERSION_MAP.md  apple-music-companion.md  architecture.md  audit.md  chafa-map.md  config.md  fastfetch-map.md  glossary.md  greenhouse-roadmap.md  hero-cache.md  hygiene.md  launcher-map.md  loading-screen.md  main-scene-scaffold.md  palette-reference.md  palette-sheet-reference.md  reference-sigye.md  release-model.md  rendering.md  resource-map.md  scene-model.md  soft-line-atlas.md  startup-bridge.md  theme.md  vines.md  weather-widget.md
engine/: ecosystem.py
fastfetch/: README.md  config.jsonc  startup.zsh
ghostty/: README.md  config
hero/: __init__.py  renderer.py
kitty/: kitty.conf
morphology/: model.py
render/: __init__.py  composer.py  emitter.py  framebuffer.py  layers.py  text_overlay.py
runtime/: __init__.py  messages.py  model.py  system.py
scripts/: check-docs.sh  check.sh  tmux-smoke.sh  update.sh  verify.sh
shape/: model.py  policy.py
src/: build_info.rs  diagnostics.rs  main.rs  runtime.rs
ui/: input.py  model.py  overlay.py  router.py
v1/: README.md
(+332 files in other folders)
