[package]
name = "yam-rust"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "yam-rust"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.27"
chrono = "0.4"
figlet-rs = "1.0"
ansi-to-tui = "8.0.1"
portable-pty = "0.8"
image = "0.25"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.2"

[build-dependencies]
chrono = "0.4"
