[package]
name = "yam-rust"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "yam-rust"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
chrono = "0.4"
figlet-rs = "1.0"
ansi-to-tui = "8.0.1"
image = { version = "0.25", default-features = false, features = ["gif"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.2"
tachyonfx = { version = "0.25", features = ["std-duration"] }

[build-dependencies]
chrono = "0.4"
